--- a/0525jbh.html
+++ b/0525jbh.html
@@ -56,8 +56,8 @@
             <br>
             <h1 style="font-weight: 300;font-size: 300%;">START PAGE</h1>
             <h4>Template by w3.css</h4>
-            <div style="background-color: black; width: 10%;height: 30px; margin: auto;">
-                <h4>asdf</h4>
+            <div style="background-color: black; width: 30%;height: 30px; margin: auto;">
+                <h4>button</h4>
             </div>
             <br><br><br>
         </div>
